--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,6 @@
         <module>kafka-producer</module>
 		<module>kafka-consumer</module>
         <module>library-service</module>
-        <!--<module>discovery-server</module>
-        <module>api-gateway</module>-->
     </modules>
 
     <properties>
@@ -44,6 +42,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
