--- a/kafka-consumer/pom.xml
+++ b/kafka-consumer/pom.xml
@@ -28,7 +28,19 @@
 		<artifactId>spring-kafka-test</artifactId>
 		<scope>test</scope>
 	</dependency>
-	<!-- <dependency>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-data-jpa</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-data-rest</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-jdbc</artifactId>
+	</dependency>
+	<dependency>
 		<groupId>org.postgresql</groupId>
 		<artifactId>postgresql</artifactId>
 		<scope>runtime</scope>
@@ -37,7 +49,7 @@
 		<groupId>org.testcontainers</groupId>
 		<artifactId>postgresql</artifactId>
 		<scope>test</scope>
-	</dependency>-->
+	</dependency>
 </dependencies>
 
 </project>
