--- a/kafka-consumer/src/main/resources/application.properties
+++ b/kafka-consumer/src/main/resources/application.properties
@@ -1,1 +1,32 @@
+spring.profiles.active=local
 server.port=9001
+
+## Spring Boot Kafka Config ###
+topics.retry=library-events.RETRY
+topics.dlt=library-events.DLT
+spring.kafka.template.default-topic=library-events
+spring.kafka.consumer.bootstrap-servers=localhost:9092,localhost:9093,localhost:9094
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.IntegerDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.group-id=book-events-listener-group
+spring.kafka.consumer.auto-offset-reset=latest
+spring.kafka.producer.bootstrap-servers=localhost:9095,localhost:9096,localhost:9097
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.IntegerSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+### Data Source ###
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/library-service
+spring.datasource.username=technolearnlibrary
+spring.datasource.password=technolearnpwd
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=true
+
+
+#spring.kafka.consumer.ssl.trust-store-location=file:/Dilip/udemy/kafka-for-developers-using-spring-boot/ssl/client.truststore.jks
+#spring.kafka.consumer.ssl.trust-store-password=password
+#spring.kafka.consumer.ssl.key-store-location=file:/Dilip/udemy/kafka-for-developers-using-spring-boot/ssl/client.keystore.jks
+#spring.kafka.consumer.ssl.key-store-password=password
+#spring.kafka.properties.security.protocol=SSL
+#spring.kafka.properties.ssl.endpoint.identification.algorithm=null
