minor misc fixes after fucntional testing

--- a/kafka-consumer/src/main/resources/application.properties
+++ b/kafka-consumer/src/main/resources/application.properties
@@ -10,7 +10,9 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Int
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.group-id=book-events-listener-group
 spring.kafka.consumer.auto-offset-reset=latest
-spring.kafka.producer.bootstrap-servers=localhost:9095,localhost:9096,localhost:9097
+
+#For test
+spring.kafka.producer.bootstrap-servers=localhost:9092,localhost:9093,localhost:9094
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.IntegerSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
@@ -22,6 +24,7 @@ spring.datasource.password=technolearnpwd
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
 
 
 #spring.kafka.consumer.ssl.trust-store-location=file:/Dilip/udemy/kafka-for-developers-using-spring-boot/ssl/client.truststore.jks
