--- a/kafka-producer/src/main/resources/application.properties
+++ b/kafka-producer/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 spring.profiles.active=local
 server.port=9000
 
-## Spring Boot Kafka Config ###
+## Spring Boot Kafka Config ### https://kafka.apache.org/documentation/#producerconfigs
 spring.kafka.template.default-topic=library-events
 spring.kafka.producer.bootstrap-servers=localhost:9092,localhost:9093,localhost:9094
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.IntegerSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+## Promote less frequent connections to broker by providing >0 batch-seize and linger.ms value
+spring.kafka.producer.batch-size=1000
+spring.kafka.producer.properties.linger.ms=1000
 spring.kafka.producer.properties.acks=all
 spring.kafka.producer.properties.retries=10
 spring.kafka.producer.properties.retry.backoff.ms=1000
