--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,4 +39,37 @@ services:
     volumes: 
       - ./.postgres-library:/data/postgres #Mapping postgres's DB data storage path to dir outside of container
 
-#Spring boot service conatiners 
+#Spring boot service containers 
+
+  kafka-producer:
+    container_name: kafka-producer
+    image: technolearn/kafka-producer:latest
+    expose:
+      - "9000"
+    ports:
+      - "9000:9000"
+    pull_policy: always
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      - zookeeper
+      - kafka1
+      - kafka2
+      - kafka3
+  
+  kafka-consumer:
+    container_name: kafka-consumer
+    image: technolearn/kafka-consumer:latest
+    expose:
+      - "9001"
+    ports:
+      - "9001:9001"
+    pull_policy: always
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-library:5432/library-service
+    depends_on:
+      - zookeeper
+      - kafka1
+      - kafka2
+      - kafka3
