--- a/kafka-ssl/docker-compose.yml
+++ b/kafka-ssl/docker-compose.yml
@@ -24,7 +24,8 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181"
-      KAFKA_ADVERTISED_LISTENERS: SSL://localhost:9092
+      KAFKA_ADVERTISED_LISTENERS: SSL://kafka1:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: SSL:SSL
       KAFKA_SSL_KEYSTORE_FILENAME: kafka.kafka1.keystore.jks
       KAFKA_SSL_KEYSTORE_CREDENTIALS: kafka1_keystore_creds
       KAFKA_SSL_KEY_CREDENTIALS: kafka1_sslkey_creds
