Fixing issues for running kafka SSL config iun docker conatiners -> Mounting path at the time of service startup. So keystore paths in application-ssl.properties can be resolved correctly

--- a/docker-compose-ssl.yml
+++ b/docker-compose-ssl.yml
@@ -39,6 +39,8 @@ services:
     ports:
       - "9000:9000"
     pull_policy: always
+    volumes:
+      - ./kafka-ssl:/kafka-ssl
     environment:
       - SPRING_PROFILES_ACTIVE=ssl
     depends_on:
@@ -53,6 +55,8 @@ services:
     ports:
       - "9001:9001"
     pull_policy: always
+    volumes:
+      - ./kafka-ssl:/kafka-ssl
     environment:
       - SPRING_PROFILES_ACTIVE=ssl
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-library:5432/library-service
