--- a/kafka-consumer/src/main/resources/application-ssl.properties
+++ b/kafka-consumer/src/main/resources/application-ssl.properties
@@ -4,7 +4,8 @@ server.port=9001
 topics.retry=library-events.RETRY
 topics.dlt=library-events.DLT
 spring.kafka.template.default-topic=library-events
-spring.kafka.consumer.bootstrap-servers=localhost:9092
+#Change to localhost:9092 in running the spring boot app in local without container
+spring.kafka.consumer.bootstrap-servers=kafka1:29092
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.IntegerDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.group-id=book-events-listener-group
