--- a/kafka-producer/src/main/resources/application-ssl.properties
+++ b/kafka-producer/src/main/resources/application-ssl.properties
@@ -2,7 +2,8 @@ server.port=9000
 
 ## Spring Boot Kafka Config ### https://kafka.apache.org/documentation/#producerconfigs
 spring.kafka.template.default-topic=library-events
-spring.kafka.producer.bootstrap-servers=localhost:9092
+#Change to localhost:9092 in running the spring boot app in local without container
+spring.kafka.producer.bootstrap-servers=kafka1:29092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.IntegerSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 ## Promote less frequent connections to broker by providing >0 batch-seize and linger.ms value
